--- a/src/App.css
+++ b/src/App.css
@@ -23,10 +23,17 @@ body {
   padding-right: 10rem;  /* sağ boşluk */
 }
 
+@media (max-width: 768px) {
+  .container {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+}
+
 /* Navbar */
 /* Navbar genel stil */
 .navbar {
-  background-color: #ffffff;
+  background-color: #c0e1ff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   position: sticky;
   top: 0;
@@ -81,7 +88,7 @@ body {
   .navbar nav {
     display: none; /* normalde gizle */
     flex-direction: column;
-    background-color: #ffffff;
+    background-color: #c5ddff;
     position: absolute;
     top: 100%;
     left: 0;
@@ -105,7 +112,7 @@ body {
 
 
 /* Hero Section */
-.hero {
+/*.hero {
   min-height: 90vh;
   display: flex;
   align-items: center;
@@ -113,7 +120,21 @@ body {
   text-align: center;
   background: linear-gradient(135deg, #007bff, #00d4ff);
   color: white;
+}*/
+.hero {
+  min-height: 90vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+
+/*  background: url("/src/assets/soft2.jpeg") center center / cover no-repeat;
+*/ 
+  background: linear-gradient(135deg, #007bff, #00d4ff); 
+  color: white;
+  position: relative;
 }
+
 
 .hero h1 {
   font-size: 3rem;
@@ -146,6 +167,17 @@ body {
   grid-template-columns: 1fr 1.5fr;
   gap: 40px;
   align-items: center;
+}
+
+@media (max-width: 768px) {
+  .about-grid {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+
+  .about-image img {
+    margin: 0 auto;
+  }
 }
 
 .about-image img {
